# sqlalchemy-studio

./: .gitignore  README.md
sqlalchemy-studio-backend/: README.md  index.html  main.py  pyproject.toml  tes.py
sqlalchemy-studio-backend/.github/workflows/: publish.yml
sqlalchemy-studio-backend/backend/: main.py
sqlalchemy-studio-backend/db/: main.py
sqlalchemy-studio-backend/sqlalchemy_studio/: Studio.py  __init__.py  backend.py
sqlalchemy-studio-backend/sqlalchemy_studio/static/: index.html
sqlalchemy-studio-backend/static/assets/: index-0qQM-QLq.js  index-B8xFyRBc.css  routes-BJJUUmei.js  tables._tableName-C7FBzk6i.js
sqlalchemy-studio-backend/test-db/: main.py
sqlalchemy-studio-front/: .cta.json  common.ts  index.html  package.json
sqlalchemy-studio-front/src/: routeTree.gen.ts  styles.css
sqlalchemy-studio-front/src/components/: Sidebar.tsx  Tables.tsx
sqlalchemy-studio-front/src/routes/: __root.tsx  tables.$tableName.tsx
