[project]
name = "sqlalchemy-studio-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
authors = [
    { name = "Xursand Qarlibayev", email = "coderxuz2009@gmail.com" },
]
license = { text = "MIT" }
keywords = ["sqlalchemy", "database", "inspector", "studio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
urls = { "Homepage" = "https://github.com/coderxuz/sqlalchemy-studio", "Source" = "https://github.com/coderxuz/sqlalchemy-studio" }
