[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-studio"
version = "0.1.8"
description = "FastAPI studio for inspecting SQLAlchemy databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build>=1.5.0",
    "fastapi>=0.136.3",
    "sqlalchemy>=2.0.50",
    "twine>=6.2.0",
    "uvicorn>=0.48.0",
]
authors = [
    { name = "Xursand Qarlibayev", email = "coderxuz2009@gmail.com" },
]
license = { text = "MIT" }
keywords = ["sqlalchemy", "database", "inspector", "studio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
urls = { "Homepage" = "https://github.com/coderxuz/sqlalchemy-studio", "Source" = "https://github.com/coderxuz/sqlalchemy-studio" }

[tool.setuptools.packages.find]
include = ["studio*", "sqlalchemy_studio*"]

[tool.setuptools.package-data]
sqlalchemy_studio = ["static/**/*"]
